fix alignment issue with header and footer on lager screens

--- a/imports/ui/components/studentFooter/studentFooter.less
+++ b/imports/ui/components/studentFooter/studentFooter.less
@@ -10,7 +10,7 @@
     }
 
     @media (min-width: 1366px) {
-        padding: 20px 100px;
+        padding: 20px 120px;
     }
 
     > a {
