--- a/imports/ui/components/studentHeader/studentHeader.less
+++ b/imports/ui/components/studentHeader/studentHeader.less
@@ -9,8 +9,8 @@
     }
 
     @media (min-width: 1366px) {
-        margin-right: 90px;
-        margin-left: 90px;
+        margin-right: 120px;
+        margin-left: 120px;
     }
 
     a {
